Update readme, use env for CORS settings
